# BorAI

./: .gitignore  README.md  chat.py  commands.py  error.py  gpt.py  img.py  imggen.py  lchain.py  main.py  multichat.py  pyproject.toml  requirements.txt  voice.py
borai/: main.py
borai/discord/: chat_logic.py  commands_from_tools.py
borai/memory/: memory.py  memory_base.py  n_memory.py
borai/memory/converters/: converter.py  openai_converter.py
borai/misc/: functions.py
borai/models/: ai_interface.py  chatgpt.py
borai/tools/: __init__.py  dictionary_tool.py  google_search.py  tool_base.py
modules/: helper.py
modules/agents/: agentlogic.py  agenttest.py  discordAgent.py
modules/agents/tools/: __init__.py  getweatherinfo.py  googlesearch.py
modules/dnd/: dnd.py  mission.py  player.py  reminder.py  roll.py  shop.py
modules/image/: img.py  promptpicker.py
tests/tools/: test_dictionary_tool.py
